compiling_error.txt
C:\Users\mitch\Desktop\Eng1003\ENGG1003\substitution_from_txt.c: In function 'main':
C:\Users\mitch\Desktop\Eng1003\ENGG1003\substitution_from_txt.c:31:34: error: subscripted value is neither array nor pointer nor vector
             if(upperchars[j]==msg[k])
                                  ^
C:\Users\mitch\Desktop\Eng1003\ENGG1003\substitution_from_txt.c:33:20: error: subscripted value is neither array nor pointer nor vector
                 msg[k]=key[j];
                    ^
C:\Users\mitch\Desktop\Eng1003\ENGG1003\substitution_from_txt.c:36:34: error: subscripted value is neither array nor pointer nor vector
             if(lowerchars[j]==msg[k])
                                  ^
C:\Users\mitch\Desktop\Eng1003\ENGG1003\substitution_from_txt.c:38:20: error: subscripted value is neither array nor pointer nor vector
                 msg[k]=key[j];
                    ^
C:\Users\mitch\Desktop\Eng1003\ENGG1003\substitution_from_txt.c: At top level:
C:\Users\mitch\Desktop\Eng1003\ENGG1003\substitution_from_txt.c:46:3: warning: data definition has no type or storage class
   fclose(fr);
   ^~~~~~
C:\Users\mitch\Desktop\Eng1003\ENGG1003\substitution_from_txt.c:46:3: warning: type defaults to 'int' in declaration of 'fclose' [-Wimplicit-int]
C:\Users\mitch\Desktop\Eng1003\ENGG1003\substitution_from_txt.c:46:3: warning: parameter names (without types) in function declaration
C:\Users\mitch\Desktop\Eng1003\ENGG1003\substitution_from_txt.c:47:3: warning: data definition has no type or storage class
   fclose(fw);
   ^~~~~~
C:\Users\mitch\Desktop\Eng1003\ENGG1003\substitution_from_txt.c:47:3: warning: type defaults to 'int' in declaration of 'fclose' [-Wimplicit-int]
C:\Users\mitch\Desktop\Eng1003\ENGG1003\substitution_from_txt.c:47:3: warning: parameter names (without types) in function declaration
C:\Users\mitch\Desktop\Eng1003\ENGG1003\substitution_from_txt.c:48:10: error: expected declaration specifiers or '...' before string constant
   printf("\nThe file has sucessfully been encoded and saved as %s\n", filewrite);
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\mitch\Desktop\Eng1003\ENGG1003\substitution_from_txt.c:48:71: error: unknown type name 'filewrite'
   printf("\nThe file has sucessfully been encoded and saved as %s\n", filewrite);
                                                                       ^~~~~~~~~
C:\Users\mitch\Desktop\Eng1003\ENGG1003\substitution_from_txt.c:49:3: error: expected identifier or '(' before 'return'
   return 0;
   ^~~~~~
C:\Users\mitch\Desktop\Eng1003\ENGG1003\substitution_from_txt.c:50:1: error: expected identifier or '(' before '}' token
 }
 ^
